# ProtoPhysics

./: .gitignore  CMakeLists.txt
include/ProtoGL/: display.hpp  error.hpp  indexbuffer.hpp  renderer.hpp  shader.hpp  vertexarray.hpp  vertexbuffer.hpp  vertexbufferlayout.hpp
res/shaders/basic/: fragment.fsh  vertex.vsh
src/: chargedobject.hpp  chargedparticle.hpp  gravityhandler.hpp  gravityparticle.hpp  main.cpp  objectrenderer.hpp  physicsenvironment.hpp  physicshandler.hpp  physicsobject.hpp
